Changes in booking page script

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,16 @@
 <td>smoke </td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdult_TC_3</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
+<td>smoke </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
