--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fe7d71">  <td>20/03/06 13:21:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
-<tr bgcolor="86f7b2">  <td>20/03/06 13:21:57</td>   <td>19842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@660879561</td>   <td></td> </tr>
-<tr bgcolor="fe7d71">  <td>20/03/06 13:22:58</td>   <td>80146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@35a50a4c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@660879561</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:18:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="956e91">  <td>20/04/29 13:18:49</td>   <td>25134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:26:22</td>   <td>478167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:26:27</td>   <td>482540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="956e91">  <td>20/04/29 13:26:40</td>   <td>495544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
+  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:33:14</td>   <td>890091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:33:19</td>   <td>894463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="956e91">  <td>20/04/29 13:33:33</td>   <td>908702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingTwoRoomTwoAdult_TC_3</td> 
+  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="70a3d8">  <td>20/04/29 13:42:42</td>   <td>1458160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
 </table>
