--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,23 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>bookingFlightAndHotelForSingleCity_TC_7</td>
-=======
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCity_TC_10</td>
->>>>>>> b60fbc97bb0ac7c6f4ae15ca6791b7e4c69001c7
+<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -36,6 +27,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
