--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vaishali\AppData\Local\Temp\testng-eclipse-1977085017\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingTwoRoomThreeAdultOneChild_TC_4(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneCh...)">bookingTwoRoomThreeAdultOneChild_TC_4(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneCh...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="multipleCities_TC_21(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lan...)">multipleCities_TC_21(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lan...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookingTwoRoomThreeAdultOneChild_TC_4(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneCh...)">
-                  </a> <!-- bookingTwoRoomThreeAdultOneChild_TC_4(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneCh...) -->
-                  <span class="method-name">bookingTwoRoomThreeAdultOneChild_TC_4</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <a name="multipleCities_TC_21(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lan...)">
+                  </a> <!-- multipleCities_TC_21(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lan...) -->
+                  <span class="method-name">multipleCities_TC_21</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method) throws java.lang.Exception)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vaishali\AppData\Local\Temp\testng-eclipse-1977085017\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/1t/skflvzy92gb4hm75_dmcs0th0000gn/T/testng-eclipse-2057183241/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -173,7 +173,7 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">bookingTwoRoomThreeAdultOneChild_TC_4</span>
+                <span class="method-in-group-name">multipleCities_TC_21</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -195,14 +195,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookingTwoRoomThreeAdultOneChild_TC_4')
+data.setCell(0, 1, 'multipleCities_TC_21')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 365168);
+data.setCell(0, 3, 116573);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -234,12 +234,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookingTwoRoomThreeAdultOneChild_TC_4(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneCh...)</span>
-                <span class="method-start">35297 ms</span>
+                <span class="method-name">multipleCities_TC_21(public void com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21(java.lan...)</span>
+                <span class="method-start">13042 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">400471 ms</span>
+                <span class="method-start">129619 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
