--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
+<td>multipleCities_TC_21</td>
 <td>smoke </td>
 </tr>
 <tr>
