--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eca56e">  <td>20/04/21 17:22:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@64d7f7e0]">bookingTwoRoomThreeAdultOneChild_TC_4</td> 
-  <td>main@2011791487</td>   <td></td> </tr>
-<tr bgcolor="eeefeb">  <td>20/04/21 17:21:42</td>   <td>-35295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@64d7f7e0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2011791487</td>   <td></td> </tr>
-<tr bgcolor="eeefeb">  <td>20/04/21 17:28:22</td>   <td>365174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@64d7f7e0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2011791487</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/07 10:12:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">multipleCities_TC_21</td> 
+  <td>main@912011468</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/07 10:12:27</td>   <td>-13041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/07 10:14:36</td>   <td>116578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
 </table>
