--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,82 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd936a">  <td>20/05/07 10:12:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">multipleCities_TC_21</td> 
-  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="74868d">  <td>20/05/07 10:12:27</td>   <td>-13041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
-<tr bgcolor="74868d">  <td>20/05/07 10:14:36</td>   <td>116578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2f8f5f62]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@912011468</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:52:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18(java.lang.reflect.Method)[pri:12, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingDetailswithPremiumEcomomy_TC_18</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:37:31</td>   <td>-903705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingFlightAndHotelForSingleCity_TC_7</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:34:04</td>   <td>-1110699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingFlightsWithmultipleCities_TC_6</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:13:09</td>   <td>-2365534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_WithAdditionalChangesTC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingSingleRoomOneAdultOneChild_WithAdditionalChangesTC_2</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:09:50</td>   <td>-2563775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:17:03</td>   <td>-2131412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:28:12</td>   <td>-1462241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:55:31</td>   <td>176464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9(java.lang.reflect.Method)[pri:14, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">dateChanging_TC_9</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:40:48</td>   <td>-705932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.europePageBookingForMultipleCities_TC_8(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">europePageBookingForMultipleCities_TC_8</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:23:39</td>   <td>-1735198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.flightBookingWithFirstPackage_TC_4_Additional_changes(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">flightBookingWithFirstPackage_TC_4_Additional_changes</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:45:29</td>   <td>-425246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">multipleCities_TC_21</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:47:43</td>   <td>-291321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_WithAdditonalChanges_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">removeAddedCity_WithAdditonalChanges_TC_17</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:09:28</td>   <td>-2585963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:12:57</td>   <td>-2377233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:16:37</td>   <td>-2156822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:23:26</td>   <td>-1748742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:27:48</td>   <td>-1486026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:33:39</td>   <td>-1134949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:37:18</td>   <td>-916357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:40:24</td>   <td>-729819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:45:17</td>   <td>-437532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:47:30</td>   <td>-304182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:52:04</td>   <td>-29921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:54:16</td>   <td>102187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:55:18</td>   <td>163978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:12:57</td>   <td>-2377236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:16:37</td>   <td>-2156823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:23:26</td>   <td>-1748743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:27:48</td>   <td>-1486027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:33:39</td>   <td>-1134949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:37:18</td>   <td>-916360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:40:24</td>   <td>-729824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:45:17</td>   <td>-437533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:47:30</td>   <td>-304192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:52:04</td>   <td>-29925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:54:16</td>   <td>102180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:55:18</td>   <td>163972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>20/05/18 17:58:20</td>   <td>345420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1906808037</td>   <td></td> </tr>
+<tr bgcolor="bd936a">  <td>20/05/18 17:54:40</td>   <td>125944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.verifySpotlightLink_TC_14(java.lang.reflect.Method)[pri:13, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1068e947]">verifySpotlightLink_TC_14</td> 
+  <td>main@1906808037</td>   <td></td> </tr>
 </table>
