--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
-<td>smoke </td>
+<td>bookingSingleRoomtwoAdultOneChildTC_2</td>
+<td>smok </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
