--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,62 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyFooterText_TC_16</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPopularVacationPackages_TC_13</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyMoreHighlightAndAttractionLinks_Mob_TC_11</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCity_TC_10</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyStartAgainLink_TC_15</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -69,6 +13,11 @@
 <td>&nbsp;</td>
 <td>verifySpotlightLink_TC_14</td>
 <td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>flightBookingWithFirstPackage_TC_4_Additional_changes</td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -82,38 +31,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>bookingSingleRoomtwoAdultOneChildTC_2</td>
+<td>smok </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>dateChanging_TC_9</td>
 <td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightAndHotelForSingleCity_TC_7</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>removeAddedCity_WithAdditonalChanges_TC_17</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoomOneAdultOneChild_WithAdditionalChangesTC_2</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingDetailswithPremiumEcomomy_TC_18</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightsWithmultipleCities_TC_6</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>flightBookingWithFirstPackage_TC_4_Additional_changes</td>
-<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -128,6 +52,21 @@
 <tr>
 <td>&nbsp;</td>
 <td>multipleCities_TC_21</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightAndHotelForSingleCity_TC_7</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeAddedCity_WithAdditonalChanges_TC_17</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingDetailswithPremiumEcomomy_TC_18</td>
 <td>smoke </td>
 </tr>
 <tr>
