--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,19 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.flightBookingWithFirstPackage_TC_4_Additional_changes</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.europePageBookingForMultipleCities_TC_8</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyPopularVacationPackages_TC_13</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyCity_TC_10</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyStartAgainLink_TC_15</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyFooterText_TC_16</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.dateChanging_TC_9</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_12</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttractionLinks_Mob_TC_11</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.removeAddedCity_WithAdditonalChanges_TC_17</td></tr>
 </table>
