--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomtwoAdultOneChildTC_2</td>
-<td>smok </td>
+<td>verifySpotlightLink_TC_14</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
