--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,13 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.dateChanging_TC_9</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.flightBookingWithFirstPackage_TC_4_Additional_changes</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.europePageBookingForMultipleCities_TC_8</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.multipleCities_TC_21</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomtwoAdultOneChildTC_2</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.removeAddedCity_WithAdditonalChanges_TC_17</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14</td></tr>
 </table>
