--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,6 +15,61 @@
 <td>smoke </td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>flightBookingWithFirstPackage_TC_4_Additional_changes</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>dateChanging_TC_9</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomtwoAdultOneChildTC_2</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>europePageBookingForMultipleCities_TC_8</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>multipleCities_TC_21</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightAndHotelForSingleCity_TC_7</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeAddedCity_WithAdditonalChanges_TC_17</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingDetailswithPremiumEcomomy_TC_18</td>
+<td>smoke </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
